﻿Release history for Minecraft-SectionFilter

{{$NEXT}}

0.003002 2014-08-15T23:11:19Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - reduce whitespace.

 [Dependencies::Stats]
 - Dependencies changed since 0.003001, see misc/*.deps* for details
 - develop: ↑1 (suggests: ↑1)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

0.003001 2014-08-12T11:34:43Z
 [Bugfix]
 - require a Test::More without a broken subtest {}

 [Dependencies::Stats]
 - Dependencies changed since 0.003000, see misc/*.deps* for details
 - test: ↑1

0.003000 2014-08-12T01:28:34Z
 [00 Major]
 - Some changes that may affect hand-operated downstreams.

 [01 Toolkit]
 - Switched to EUMM
 - "Latest" dependencies now only recommendations
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [Dependencies::Stats]
 - Dependencies changed since 0.002000, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +45 -2 (recommends: -1, suggests: +1 ↑1)
 - test: +2 ↓1 -2 (recommends: +3)

 [Misc]
 - moved to kentnl org
 - now legal META.yml
 - Source now UTF-8 instead of Latin1 (lol!)
 - Report Versions test uses Test::ReportPrereqs
 - Compile Test uses Test::Compile::PerFile

0.002000 2013-04-07T21:26:10Z
 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - runtime: +1

 [Feature]
 - Now warns when a un-assigned section code is seen in the ansi filter. 
 - If the section code is an upper case version of a lower case known one, lower case one is used and a warning is
   printed to STDERR
 - If the section code is not know, in either upper case or lower case, a warning is printed to STDERR and a
   placeholder inserted into the output in the form <unknow section O>

 [Packaging]
 - uses Module::Build 0.4004 test_requires

0.001002 2013-04-04T00:08:25Z
 [BugFix]
 - Depend on at least Term::ANSIColor 4 to avoid "bright_*" failing.

 [Dependencies::Stats]