@@ -1,2 +1,3 @@
-.build
-Minecraft-SectionFilter-*
+/.build
+/Minecraft-SectionFilter-*
+/tmp/
