@@ -1,0 +1,2 @@
+# git help shortlog
+<kentnl@cpan.org> <kentfredric@gmail.com>
