@@ -1,6 +1,6 @@
 # NAME
 
-Minecraft::SectionFilter - Strip/Process magical Â§ characters from minecraft
+Minecraft::SectionFilter - Strip/Process magical § characters from minecraft
 
 # VERSION
 
@@ -52,11 +52,11 @@ Translate section codes to Term::ANSIColor color codes.
 
 # AUTHOR
 
-Kent Fredric <kentfredric@gmail.com>
+Kent Fredric <kentnl@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2014 by Kent Fredric <kentfredric@gmail.com>.
+This software is copyright (c) 2017 by Kent Fredric <kentfredric@gmail.com>.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
