@@ -1,6 +1,7 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.7.1 at Sun Mar 31 06:37:14 2013
+; vim: syntax=dosini
 name             = Minecraft-SectionFilter
-author           = Kent Fredric <kentfredric@gmail.com>
+author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
@@ -9,8 +10,7 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
 [@Author::KENTNL]
 :version          = 2.017
-git_versions      = 1
-twitter_hash_tags = #perl #cpan
+twitter_extra_hash_tags = #minecraft
 normal_form       = numify
 mantissa          = 6
 toolkit           = eumm
