@@ -1,6 +1,13 @@
 ﻿Release history for Minecraft-SectionFilter
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.003002, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +14 ↑4 -3 (recommends: +1, suggests: ↑2)
+ - test: +1 (recommends: ↑1 ↓1)
 
 0.003002 2014-08-15T23:11:19Z
  [00 Trivial]
@@ -82,4 +89,3 @@
 
 0.001000 2013-03-30T18:49:56Z
  - First version.
-
